Alert user and display the result

--- a/12 Key Sequence Detection/index.html
+++ b/12 Key Sequence Detection/index.html
@@ -30,7 +30,7 @@
 const arr = [];
 const secretCode = 'awesome';
 let decode = document.querySelector('.decode');
-
+alert('Guess the secret word...');
 
 window.addEventListener('keyup', (e) => {
   console.log(e.key);
